--- a/GoogleFeud.CSharp.Editor.csproj
+++ b/GoogleFeud.CSharp.Editor.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Assets\UITween\Editor\EditorUITween.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Boomlagoon\JSON\Readme.txt" />
     <None Include="Assets\Examples\License.txt" />
     <None Include="Assets\Facebook\Scripts\Canvas\Resources\JSSDKBindings.txt" />
     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
