--- a/GoogleFeud.CSharp.Plugins.csproj
+++ b/GoogleFeud.CSharp.Plugins.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Assets\Plugins\DDBHelper\Scripts\DBWorker.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Boomlagoon\JSON\Readme.txt" />
     <None Include="Assets\Examples\License.txt" />
     <None Include="Assets\Facebook\Scripts\Canvas\Resources\JSSDKBindings.txt" />
     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
