--- a/GoogleFeud.CSharp.csproj
+++ b/GoogleFeud.CSharp.csproj
@@ -90,6 +90,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Boomlagoon\JSON\JSONObject.cs" />
+    <Compile Include="Assets\Boomlagoon\JSON\TestScene\JSONObjectTester.cs" />
     <Compile Include="Assets\Examples\DynamoDBBaseExample.cs" />
     <Compile Include="Assets\Examples\DynamoDBExample.cs" />
     <Compile Include="Assets\Examples\HighLevelTableExample.cs" />
@@ -221,6 +223,7 @@
     <Compile Include="Assets\Scripts\scoreComp\m_scoreCompManager.cs" />
     <Compile Include="Assets\Scripts\scoreComp\obj_backToMenuBtn.cs" />
     <Compile Include="Assets\Scripts\test\animCallbackTest.cs" />
+    <Compile Include="Assets\Scripts\test\jsonImportTest.cs" />
     <Compile Include="Assets\Scripts\titleScreen\m_titleScreenManager.cs" />
     <Compile Include="Assets\Scripts\titleScreen\playerSetter.cs" />
     <Compile Include="Assets\UITween\Prefabs\Click Effect Pref\ClickedWaveAnimation.cs" />
@@ -233,6 +236,7 @@
     <Compile Include="Assets\appManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Boomlagoon\JSON\Readme.txt" />
     <None Include="Assets\Examples\License.txt" />
     <None Include="Assets\Facebook\Scripts\Canvas\Resources\JSSDKBindings.txt" />
     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
